test: fix scrollbar windows

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -191,3 +191,12 @@ input[type="number"] {
   text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
     1px 1px 0 #fff;
 }
+
+.no-scrollbar {
+  overflow: auto;
+  scrollbar-width: none;
+}
+
+.no-scroll::-webkit-scrollbar {
+  display: none;
+}
